themes/exeal/assets/scss/main.scss
/* ... */
ul.ticked li {
  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20x%3D%220px%22%20y%3D%220px%22%20viewBox%3D%220%200%2040%2040%22%3E%3Cpath%20d%3D%22M37.9%2C10.6l-3.2-3.2c-0.4-0.4-1-0.7-1.6-0.7c-0.6%2C0-1.2%2C0.2-1.6%2C0.7L15.9%2C23l-7-7c-0.4-0.4-1-0.7-1.6-0.7S6.1%2C15.6%2C5.6%2C16%20l-3.2%2C3.2c-0.4%2C0.4-0.7%2C1-0.7%2C1.6S2%2C22%2C2.4%2C22.5l8.6%2C8.6l3.2%2C3.2c0.4%2C0.4%2C1%2C0.7%2C1.6%2C0.7c0.6%2C0%2C1.2-0.2%2C1.6-0.7l3.2-3.2l17.2-17.2%20c0.4-0.4%2C0.7-1%2C0.7-1.6C38.6%2C11.6%2C38.4%2C11.1%2C37.9%2C10.6z%22%20fill%3D%22%2305E69B%22%20%2F%3E%3C%2Fsvg%3E");
  background-position-y: 0.3em;
  background-position-x: 0.75rem;
  background-repeat: no-repeat;
  background-size: 1rem;
  padding-left: 2.75rem;
  padding-bottom: 0.75rem;
}

div.icon-container {
  min-height: 5.5em;
  display: flex;
}

@media (min-width: 1200px) {
  h1.arrow-right:before {
    content: url("/assets/img/arrow-right-secondary.svg");
    display: inline-block;
    margin-right: 1em;
    position: relative;
    top: 0.15em;
  }
}

sup {
  font-size: 0.75em;
}

.center-horizontal {
  margin-left: auto;
  margin-right: auto;
}

.collapsable {
  cursor: pointer;
  width: calc(100% - 3em);
  height: 50px;
  text-align: center;
  color: $secondary-color;
}

.collapsable .image {
  content: url("/assets/img/arrow-collapse.svg");
  position: relative;
  top: calc(100% - 15px);
  margin-left: 80%;
  transform: rotate(180deg);
}

.collapsable.collapsed .image {
  transform: unset;
}

@media (max-width: 768px) {
  .collapsable .image {
    margin-left: calc(100% + 0.2em);
  }
}

.collapsable.expanded {
  position: relative;
  top: -4px;
}

.collapsable > h2 {
  margin: 0em;
}

dl.faq dt {
  font-family: "Gopher Regular", sans-serif;
  color: $mid-gray;
  border-color: $primary-color;
  border-bottom-style: solid;
  border-width: 2px;
  font-size: 1.25em;
  padding-top: 0.75em;
  padding-bottom: 0.75em;
}

dl.faq dd {
  color: $mid-gray;
  padding-bottom: 1em;
  padding-top: 1em;
}

p.taxes {
  color: $mid-gray;
  font-size: 0.75em;
}

.carousel-indicators {
  display: inline-block;
  margin-right: 1em;
  margin-left: 0px;
  position: relative;
  bottom: 0px;
}

.carousel-indicators li {
  display: inline-block;
  width: 10px;
  height: 10px;
  margin: 10px;
  text-indent: 0;
  cursor: pointer;
  border: none;
  border-radius: 50%;
  position: relative;
  top: 0.15em;
}

.carousel-indicators.carousel-testimonials li {
  background-color: #d0d0d0;
}

.carousel-indicators.carousel-testimonials .active {
  background-color: $dark-background-color;
}

//
// CUSTOMER
//

.customer {
  & {
    margin-top: 1em;
    margin-bottom: 1em;
  }

  & > * {
    vertical-align: middle;
  }

  & .customer-info {
    display: inline-block;
    font-family: "Gopher Regular", sans-serif;
  }

  @media (min-width: 992px) {
    & .customer-info {
      text-align: left;
      margin-left: 1.5em;
    }
  }

  .dark & h6 {
    color: $primary-color;
  }

  & .customer-info p {
    margin: 0px;
    color: $mid-gray !important;
    font-size: 0.9em;
    line-height: 1.25em;
  }
}

.carousel-indicators-parent {
  margin-top: 1.5em;
  text-align: center;
}

.carousel {
  font-family: "Gopher Regular", sans-serif;
  font-size: 1.3em;
}

@media (max-width: 992px) {
  .customer .customer-info {
    display: block;
    margin-top: 1em;
  }
}

p.price {
  font-family: "Gopher Regular", sans-serif;
  color: $gloaming-background-color;
  font-size: 6em;
  margin-top: 3rem;
  margin-bottom: 3rem;
  -webkit-text-stroke-width: 3px;
  -webkit-text-stroke-color: $primary-color;
}

p.price sup {
  font-size: 3rem;
}

@media (min-width: 1200px) {
  div.price-box-left {
    margin-right: 2em;
  }

  div.price-box-right {
    margin-left: 2em;
  }
}

div.vertical-center {
  display: flex;
  align-items: center;
}

div.horizontal-center {
  display: flex;
  justify-content: center;
}

div.thank-you-hero {
  height: 25rem;
}

img.client-logo {
  padding: 1.5rem;
  max-width: 10rem;
  //filter: grayscale(100%);
  //opacity: 0.5;
}

.course-card {
  box-shadow: 0.5rem 0.5rem 1rem -1rem rgba(0, 0, 0, 0.75);
  margin-bottom: 2rem;
}

.course-header {
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  min-height: 16rem;
}

.course-body {
  padding: 1.5rem 1.5rem;
}

.course-body h3 {
  font-size: 1.5em;
  font-style: normal;
  margin-bottom: 1.25rem;
}

.course-body p.level {
  color: $light-gray;
  font-size: 1em;
  font-family: "Gopher Regular", sans-serif;
  margin-bottom: 1.25rem;
  margin-top: 0rem;
}

.course-body p.description {
  color: $mid-gray;
  font-size: 1rem;
  margin-bottom: 1.25rem;
  margin-top: 0rem;
  line-height: 150%;
}

.course-body li {
  color: $light-gray;
  font-size: 0.85rem;
  font-family: "Gopher Regular", sans-serif;
  margin-bottom: 0.5rem;
  margin-top: 0rem;
}

.course-body ul {
  margin-bottom: 1.25rem;
}

.courses-tagline {
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  background-image: url("/assets/img/blog/blog-cover-1.png");
}

.courses-tagline-inner {
  height: 100%;
  padding: 2rem;
  color: white;
  height: 22em;
  position: relative;
}

.courses-tagline h1 {
  margin-left: 2rem;
  font-family: "Gopher Regular", sans-serif;
  font-size: 2rem;
  max-width: 25rem;
}

.course-header div.featured-course {
  display: block;
  background-color: $secondary-color;
  font-family: "Gopher Regular", sans-serif;
  color: white;
  padding: 0.25rem 1rem;
  position: absolute;
  top: 1rem;
  left: 1rem;
}

img.mockup-brochure {
  max-height: 14rem;
}

.course-page-tagline h1 {
  margin-top: 0rem;
}

label {
  font-size: 0.85rem;
  color: $mid-gray;
  line-height: 100%;
}

.dark .form-control {
  border-color: white;
  background-color: transparent;
  color: white;
}
/* ... */

